[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "streamViz"
authors = [{name = "Derek Evans", email = "derek.evans@deinfoservice.com"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://techbyderek.com"
Repository = "https://github.com/REPNOT/streamViz"
Demo = "https://stream-gauge.streamlit.app/"

[project]
dependencies = [
    "streamlit",
    "plotly"
]