[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "StreamViz"
authors = [{name = "Derek Evans", email = "derek.evans@deinfoservice.com"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://www.techbyderek.com/"
